# wnacg-download

./: .eslintrc.json  .gitignore  .prettierrc.json  AGENTS.md  BUILD.md  CLAUDE.md  CLI_SEARCH_SUMMARY.md  CLI_SEARCH_TEST_GUIDE.md  CODE_WIKI.md  DEFAULT_PAGES_FIX.md  ELECTRON_QUICKSTART.md  ELECTRON_SETUP.md  README.md  RELEASE_NOTES.md  TAURI_MIGRATION.md  TAURI_QUICKSTART.md  eslint.config.js  index.html  package-lock.json  package.json  start-tauri.bat  start-tauri.ps1  tsconfig.json  tsconfig.preload.json  vite.config.ts  vite.electron.config.ts  vitest.config.ts
.claude/: CLAUDE.md  PROJECT_MEMORY.md  settings.json  settings.local.json
.trae/rules/: bss-rules.md  dev-rules.md
.trae/specs/: DEVELOPMENT_PLAN.md  README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  README.md  REQUIREMENTS.md  UI-DESIGN.md  USER_MANUAL.md  用户手册.md  界面设计.md  需求规格.md  项目进度.md
scripts/: api-server.js  download_via_playwright.js  get_download_info.js  get_download_link.js  search_with_playwright.js  test-search.sh
src/: App.vue  api-server.ts  config.ts  env.d.ts  index.html  index.ts  main.ts  setup.ts  tui.ts  types.ts
src-tauri/: Cargo.toml  debug_page.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  main.rs  notification.rs  types.rs
src-tauri/src/commands/: cloudflare.rs  compare.rs  config.rs  download.rs  mod.rs  playwright.rs  search.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/ai/: mod.rs
src-tauri/src/core/comparer/: mod.rs
src-tauri/src/core/downloader/: mod.rs  session.rs
src-tauri/src/core/scanner/: mod.rs
src-tauri/src/core/scraper/: mod.rs
src/cli/: index.ts
src/components/: Header.vue  Sidebar.vue  Skeleton.vue  ToastNotification.vue
tests/: PHASE2_COMPLETION.md  phase1-integration.test.ts  phase2-search.test.ts
(+71 files in other folders)
