[package]
name = "wnacg-downloader"
version = "4.0.0"
description = "WNACG 漫画下载器 - 纯桌面端"
authors = ["WNACG Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
reqwest_cookie_store = "0.6"
cookie_store = "0.20"

# HTML 解析
scraper = "0.18"

# 错误处理
thiserror = "1"
anyhow = "1"

# 目录操作
dirs = "5"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 打开浏览器
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
